Interim fix for bug #34

--- a/Microsoft.Bot.Sample.SimpleEchoBot.csproj
+++ b/Microsoft.Bot.Sample.SimpleEchoBot.csproj
@@ -196,6 +196,9 @@
   <ItemGroup>
     <Content Include="default.htm" />
     <Content Include="Global.asax" />
+    <None Include="Properties\PublishProfiles\multidialogbotprod-Web-Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\multidialogbottestenv2-Web-Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\multidialogbottestnenv1-Web-Deploy.pubxml" />
     <None Include="Resources\Vinnie.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
