Fix to bug 84 and also reinstated functionality from old bot for confirming the terms of the sale.

--- a/Microsoft.Bot.Sample.SimpleEchoBot.csproj
+++ b/Microsoft.Bot.Sample.SimpleEchoBot.csproj
@@ -261,6 +261,8 @@
     <Compile Include="Dialogs\RootDialog - Copy.cs" />
     <Compile Include="Dialogs\RootDialog.cs" />
     <Compile Include="Dialogs\SupportDialog.cs" />
+    <Compile Include="Dialogs\Terms1.cs" />
+    <Compile Include="Dialogs\TermsNode.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
