implementing security (scorable half)

--- a/Microsoft.Bot.Sample.SimpleEchoBot.csproj
+++ b/Microsoft.Bot.Sample.SimpleEchoBot.csproj
@@ -282,6 +282,7 @@
       <DependentUpon>Resource1.resx</DependentUpon>
     </Compile>
     <Compile Include="Scorables\DebugScorable.cs" />
+    <Compile Include="Scorables\SecuredScorable.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
